[package]
name = "card-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezoauth = "0.2.0"
reqwest = "0.11.12"
serde_json = "1.0.86"
tokio = {version = "1.21.2", features = ["full"]}
dotenv = "0.15.0"
sqlx = {version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"]}
phf = { version = "0.11.1", features = ["macros"] }
